# qwen2-triton-kernels

./: README.md  main.py  pyproject.toml
benchmarks/: bench_end_to_end.py  bench_flash_attention.py  bench_rms_norm.py  bench_swiglu.py
kernels/: __init__.py  flash_attention.py  rms_norm.py  swiglu.py
model/: __init__.py  loader.py  patch.py
scripts/: run_inference.py
tests/: test_flash_attention.py  test_rms_norm.py  test_swiglu.py
