[project]
name = "qwen2-triton-kernels"
version = "0.1.0"
description = "Triton-fused kernels (RMSNorm, SwiGLU, FlashAttention) for Qwen2.5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "triton>=2.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "liger-kernel>=0.3.0",
    "numpy>=2.4.4",
    "setuptools>=81.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernels", "model", "benchmarks", "scripts", "tests"]
